# mangadualist

./: AUTHORS  Makefile.am  README  config.h.in  configure.ac  mangadualist.6  mangadualist.desktop  mangadualist.xpm
sounds/: Makefile.am
sounds/handheld_console/: Makefile.am
src/: Makefile.am  Makefile.gp2x  bonus.c  config_file.c  config_file.h  congratulations.c  curve_phase.c  display.c  display.h  display_sdl.c  display_x11.c  electrical_shock.c  enemies.c  energy_gauge.c  explosions.c  extra_gun.c  gfx_wrapper.c  gfxroutines.c  grid_phase.c  guardians.c  images.c  inits_game.c  lispreader.c  log_recorder.c  log_recorder.h  lonely_foes.c  main.c  mangadualist.c  mangadualist.h  menu.c  menu_sections.c  meteors_phase.c  movie.c  options_panel.c  powermanga.c  powermanga.h  satellite_protections.c  scrolltext.c  sdl_mixer.c  shockwave.c  (+10 more)
texts/: Makefile.am
